--- a/2_hotel-booking/blocks/packages/_packages.scss
+++ b/2_hotel-booking/blocks/packages/_packages.scss
@@ -10,7 +10,7 @@
 
     &__wrap {
         display: grid;
-        grid-template: 500px 500px / repeat(3, 1fr);
+        grid-template: 1fr 500px / repeat(3, 1fr);
         gap: 30px;
 
     }
@@ -19,7 +19,6 @@
         position: relative;
         display: flex;
         flex-direction: column;
-        height: 500px;
         border-radius: 8px;
         overflow: hidden;
         
@@ -52,7 +51,7 @@
 
     &__img {
         object-fit: cover;
-        height: 50%;
+        height: 250px;
         min-width: 100%;
         overflow: hidden;
     }
@@ -72,7 +71,7 @@
     }
 
     &__info {
-        min-height: 50%;
+        min-height: 250px;
         min-width: 50%;
         display: flex;
         flex-direction: column;
