--- a/2_hotel-booking/css/_media.scss
+++ b/2_hotel-booking/css/_media.scss
@@ -63,7 +63,7 @@
     }
 }
 
-@media (max-width: 1100px) {
+@media (max-width: 1130px) {
     .container {
         width: 700/768*100%;
     }
@@ -108,6 +108,14 @@
     }
 }
 
+@media (max-width: 950px) {
+    .packages {
+        &__wrap {
+            grid-template: 1fr 500px / repeat(2, 1fr);
+        }
+    }
+}
+
 @media (max-width: 870px) {
     .navbar {
         &-menu {
@@ -139,7 +147,7 @@
     }
 
     .hotel-info {
-        margin-bottom: 60px;
+        padding-bottom: 60px;
     }
 }
 
@@ -276,6 +284,40 @@
 
         &__map {
             height: 173px;
+        }
+    }
+}
+
+@media (max-width: 630px) {
+    .packages {
+        &__wrap {
+            grid-template: 1fr 500px / repeat(1, 1fr);
+        }
+
+        &__card {
+            &:first-child {
+                grid-column-start: 1;
+                grid-column-end: 1;
+                flex-direction: column;
+    
+                & .packages__img {
+                    height: 250px;
+                    min-width: 100%;
+                }
+    
+                & .packages__info {
+                    padding: 30px 21px 25px 32px;
+                    min-height: auto;
+                }
+
+                & .packages__bookInfoWrap {
+                    padding-bottom: 37px;
+                }
+            }
+
+            &:nth-child(n+4) {
+                display: none;
+            }
         }
     }
 }
