--- a/2_hotel-booking/index.pug
+++ b/2_hotel-booking/index.pug
@@ -15,3 +15,4 @@ html(lang="en")
         include ./blocks/subscribe/subscribe.pug
         include ./blocks/reviews/reviews.pug
         include ./blocks/activities/activities.pug
+        include ./blocks/footer/footer.pug
