Created styles for footer

--- a/2_hotel-booking/blocks/footer/config.pug
+++ b/2_hotel-booking/blocks/footer/config.pug
@@ -102,3 +102,19 @@
             link: "#",
         },
     ]
+
+- 
+    const disclaimerList = [
+        {
+            name: "Disclaimer",
+            link: "#",
+        },
+        {
+            name: "Conditions of use",
+            link: "#",
+        },
+        {
+            name: "Cancellation policy",
+            link: "#",
+        },
+    ]
