--- a/2_hotel-booking/css/style.scss
+++ b/2_hotel-booking/css/style.scss
@@ -31,5 +31,8 @@
 //Подключение стилей развлечений
 @import "../blocks/activities/activities";
 
+//Подключение стилей для футера
+@import "../blocks/footer/footer";
+
 //Подключение стилей для адаптива
 @import "./media";
