--- a/2_hotel-booking/css/style.css
+++ b/2_hotel-booking/css/style.css
@@ -3185,6 +3185,293 @@ button.swiper-pagination-bullet {
   cursor: pointer;
 }
 
+.footer {
+  background-color: #0A223D;
+  padding: 108px 0 46px 0;
+}
+
+.footer__wrap {
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-columns: (minmax(min-content, 1fr))[4];
+      grid-template-columns: repeat(4, minmax(-webkit-min-content, 1fr));
+      grid-template-columns: repeat(4, minmax(min-content, 1fr));
+  -webkit-column-gap: 81px;
+          column-gap: 81px;
+  margin-bottom: 95px;
+}
+
+.footer__wrap--top {
+  margin-bottom: 89px;
+  -webkit-column-gap: 0;
+          column-gap: 0;
+}
+
+.footer__logo {
+  -ms-grid-row: 1;
+  -ms-grid-row-span: 2;
+  grid-row: 1 / 3;
+  -ms-grid-column: 1;
+  -ms-grid-column-span: 1;
+  grid-column: 1 / 2;
+  -ms-flex-item-align: center;
+      -ms-grid-row-align: center;
+      align-self: center;
+  width: 11.52778vw;
+}
+
+.footer__categories {
+  -ms-grid-row: 1;
+  -ms-grid-row-span: 2;
+  grid-row: 1 / 3;
+}
+
+.footer__additinal {
+  -ms-grid-column: 3;
+  -ms-grid-column-span: 1;
+  grid-column: 3 / 4;
+  -ms-grid-row: 1;
+  -ms-grid-row-span: 1;
+  grid-row: 1 / 2;
+  margin-bottom: 24px;
+}
+
+.footer__socialnetwork {
+  grid-column: span 2;
+  -ms-grid-row: 2;
+  -ms-grid-row-span: 1;
+  grid-row: 2 / 3;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+.footer__social-icon {
+  margin-right: 10px;
+}
+
+.footer__legal {
+  -ms-grid-column: 4;
+  -ms-grid-column-span: 1;
+  grid-column: 4 / 5;
+  -ms-grid-row: 1;
+  -ms-grid-row-span: 1;
+  grid-row: 1 / 2;
+  -ms-grid-column-align: end;
+      justify-self: end;
+}
+
+.footer__contacts {
+  grid-column: span 2;
+  -ms-grid-row: 1;
+  -ms-grid-row-span: 1;
+  grid-row: 1 / 2;
+}
+
+.footer__contact-icon {
+  margin-right: 22px;
+}
+
+.footer__contact-form {
+  grid-column: span 2;
+  -ms-grid-row: 1;
+  -ms-grid-row-span: 1;
+  grid-row: 1 / 2;
+}
+
+.footer__info {
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-columns: 1fr 2fr 1fr;
+      grid-template-columns: 1fr 2fr 1fr;
+}
+
+.footer__disclaimer {
+  -ms-grid-column: 2;
+  -ms-grid-column-span: 1;
+  grid-column: 2 / 3;
+  -ms-grid-column-align: center;
+      justify-self: center;
+}
+
+.footer_payment {
+  -ms-grid-column: 3;
+  -ms-grid-column-span: 1;
+  grid-column: 3 / 4;
+  -ms-grid-column-align: end;
+      justify-self: end;
+}
+
+.footer__title {
+  text-transform: uppercase;
+  font-family: "Mulish", serif;
+  font-size: 18px;
+  font-weight: 700;
+  color: #FFFFFF;
+  line-height: 22px;
+  margin: 0 0 16px;
+}
+
+.footer__title--bigmargin {
+  margin-bottom: 22px;
+}
+
+.footer__title--inline {
+  margin: 0 43px 0 0;
+}
+
+.footer__ul {
+  list-style: none;
+  padding: 0;
+  margin: 0;
+}
+
+.footer__item {
+  font-family: "Mulish", serif;
+  font-size: 14px;
+  font-weight: 400;
+  color: #BDBDBD;
+  line-height: 22px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+.footer__link {
+  font-family: "Mulish", serif;
+  font-size: 14px;
+  font-weight: 400;
+  color: #BDBDBD;
+  line-height: 22px;
+  text-decoration: none;
+}
+
+.footer__text {
+  font-family: "Mulish", serif;
+  font-size: 14px;
+  font-weight: 400;
+  color: #BDBDBD;
+  line-height: 22px;
+  margin: 0;
+}
+
+.footer__form {
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-columns: (minmax(1fr, 255px))[2];
+      grid-template-columns: repeat(2, minmax(1fr, 255px));
+  gap: 15px 30px;
+}
+
+.footer__input-name {
+  -ms-grid-row: 1;
+  -ms-grid-row-span: 1;
+  grid-row: 1 / 2;
+  -ms-grid-column: 1;
+  -ms-grid-column-span: 1;
+  grid-column: 1 / 2;
+  height: 50px;
+  border-radius: 4px;
+  font-family: "Mulish", serif;
+  font-size: 12px;
+  font-weight: 400;
+  color: #BDBDBD;
+  line-height: 15px;
+  padding-left: 23px;
+}
+
+.footer__input-phone {
+  -ms-grid-row: 1;
+  -ms-grid-row-span: 1;
+  grid-row: 1 / 2;
+  -ms-grid-column: 2;
+  -ms-grid-column-span: 1;
+  grid-column: 2 / 3;
+  height: 50px;
+  border-radius: 4px;
+  font-family: "Mulish", serif;
+  font-size: 12px;
+  font-weight: 400;
+  color: #BDBDBD;
+  line-height: 15px;
+  padding-left: 23px;
+}
+
+.footer__message {
+  -ms-grid-row: 2;
+  -ms-grid-row-span: 1;
+  grid-row: 2 / 3;
+  grid-column: span 2;
+  height: 123px;
+  border-radius: 4px;
+  font-family: "Mulish", serif;
+  font-size: 12px;
+  font-weight: 400;
+  color: #BDBDBD;
+  line-height: 15px;
+  padding: 18px 0 0 23px;
+}
+
+.footer__button {
+  -ms-grid-row: 3;
+  -ms-grid-row-span: 1;
+  grid-row: 3 / 4;
+  -ms-grid-column: 1;
+  -ms-grid-column-span: 1;
+  grid-column: 1 / 2;
+  -ms-grid-column-align: start;
+      justify-self: start;
+  padding: 17px 65px;
+  border-radius: 4px;
+  background-color: #EC1F46;
+  border: none;
+  font-family: "Mulish", serif;
+  font-size: 12px;
+  font-weight: 700;
+  color: #FFFFFF;
+  line-height: 15px;
+  cursor: pointer;
+}
+
+.footer__prompt {
+  font-family: "Mulish", serif;
+  font-size: 12px;
+  font-weight: 700;
+  color: #BDBDBD;
+  line-height: 15px;
+  -ms-grid-row: 3;
+  -ms-grid-row-span: 1;
+  grid-row: 3 / 4;
+  -ms-grid-column: 2;
+  -ms-grid-column-span: 1;
+  grid-column: 2 / 3;
+  -ms-grid-column-align: end;
+      justify-self: end;
+  -ms-flex-item-align: center;
+      -ms-grid-row-align: center;
+      align-self: center;
+}
+
+.footer__disclaimer-ul {
+  margin: 0;
+  padding: 0;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+.footer__item {
+  margin-right: 10px;
+}
+
+.footer__link {
+  font-family: "Mulish", serif;
+  font-size: 12px;
+  font-weight: 400;
+  color: #BDBDBD;
+  line-height: 15px;
+}
+
 @media (min-width: 1440px) {
   .navbar__wrap {
     -webkit-box-pack: justify;
