--- a/2_hotel-booking/css/_media.scss
+++ b/2_hotel-booking/css/_media.scss
@@ -149,6 +149,73 @@
     .hotel-info {
         padding-bottom: 60px;
     }
+
+    .footer {
+
+        &__wrap {
+            grid-template-columns: repeat(3, minmax(min-content, 1fr));
+            row-gap: 60px - 22px;
+
+            &--top {
+                margin-bottom: 61px;
+                row-gap: 38px;
+            }
+        }
+
+        &__logo {
+            grid-column: 1 / 2;
+            grid-row: 1 / 2;
+            width: 104px;
+        }
+
+        &__socialnetwork {
+            grid-column: 2 / 4;
+            grid-row: 1 / 2;
+            align-self: center;
+        }
+
+        &__categories {
+            grid-row: 2 / 3;
+            grid-column: 1 / 2;
+        }
+
+        &__additinal {
+            grid-row: 2 / 3;
+            grid-column: 2 / 3;
+        }
+
+        &__legal {
+            grid-row: 2 / 3;
+            grid-column: 3 / 4;
+        }
+
+        &__contacts {
+            grid-row: 1 / 2;
+            grid-column: span 3;
+        }
+
+        &__text {
+            margin-bottom: 22px;
+        }
+
+        &__item {
+            margin-bottom: 22px;
+
+            &:last-child {
+                margin-bottom: 0;
+            }
+        }
+
+        &__contact-form {
+            grid-row: 2 / 3;
+            grid-column: span 3;
+        }
+
+        &__info {
+            display: flex;
+            justify-content: space-between;
+        }
+    }
 }
 
 @media (max-width: 720px) {
@@ -356,6 +423,79 @@
             &:nth-child(odd) {
                 margin-right: 0;
             }
+        }
+    }
+}
+
+@media (max-width: 463px) {
+    .footer {
+        &__wrap {
+            grid-template-columns: minmax(min-content, 1fr);
+        }
+
+        &__socialnetwork {
+            grid-column: 1 / 2;
+            grid-row: 2 / 3;
+            flex-direction: column;
+        }
+
+        &__legal {
+            grid-row: 3 / 4;
+            grid-column: 1 / 2;
+            justify-self: start;
+        }
+
+        &__additinal {
+            grid-row: 4 / 5;
+            grid-column: 1 / 2;
+        }
+
+        &__categories {
+            grid-row: 5 / 6;
+            grid-column: 1 / 2;
+        }
+
+        &__contacts {
+            grid-row: 1 / 2;
+            grid-column: 1 / 2;
+            //width: (290px / 320px) * 100vw;
+        }
+
+        &__contact-form {
+            grid-row: 2 / 3;
+            grid-column: 1 / 2;
+            padding-right: 0;
+        }
+
+        &__form {
+            grid-template-columns: 1fr;
+        }
+
+        &__input {
+            &-phone {
+                grid-row: 2 / 3;
+                grid-column: 1 / 2;
+            }
+        }
+
+        &__message {
+            grid-row: 3 / 4;
+            grid-column: 1 / 2;
+        }
+
+        &__prompt {
+            grid-row: 4 / 5;
+            grid-column: 1 / 2;
+            justify-self: start;
+        }
+
+        &__button {
+            grid-row: 5 / 6;
+            grid-column: 1 / 2;
+        }
+
+        &__info {
+            flex-direction: column;
         }
     }
 }
