Fixed media rules

--- a/2_hotel-booking/blocks/footer/_footer.scss
+++ b/2_hotel-booking/blocks/footer/_footer.scss
@@ -145,6 +145,7 @@
         border-radius: 4px;
         @include font-mulish(12px, 400, $light-gray, 15px);
         padding: 18px 0 0 23px;
+        resize: none;
     }
 
     &__button {
