--- a/2_hotel-booking/blocks/header/_header.scss
+++ b/2_hotel-booking/blocks/header/_header.scss
@@ -7,14 +7,14 @@
     
     &__wrap {
         display: flex;
-        justify-content: flex-start;
+        justify-content: space-between;
         padding-top: 40px;
         padding-bottom: 40px;
         align-items: center;
     }
 
     &__logo-img {
-        @include adaptive-width(177px);
+        width: 177px;;
         margin-right: (108px / 1440px) * 100vw;
     }
 
@@ -57,7 +57,6 @@
 
 .user {
     display: flex;
-    @include adaptive-width(107px);
     justify-content: flex-start;
     align-items: center;
     text-decoration: none;
