--- a/2_hotel-booking/css/_media.scss
+++ b/2_hotel-booking/css/_media.scss
@@ -70,12 +70,21 @@
 }
 
 @media (max-width: 984px) {
+    .hotel-info {
+        padding-bottom: 60px;
+    }
+
+    .packages {
+        padding-bottom: 60px;
+    }
+
     .reviews {
-        padding-bottom: 50px;
-        padding-top: 40px;
+        padding-bottom: 60px;
     }
 
     .activities {
+        padding-bottom: 60px;
+
         &__wrap {
             flex-wrap: wrap;
         }
@@ -94,7 +103,7 @@
 @media (max-width: 992px) {
     .reviews {
         &__title {
-            font-size: 25px;
+            font-size: 30px;
             margin-bottom: 50px;
         }
 
@@ -104,6 +113,13 @@
             &::before, &::after {
                 display: none;
             }
+        }
+    }
+
+    .packages {
+        &__title {
+            font-size: 30px;
+            margin-bottom: 50px;
         }
     }
 }
@@ -142,7 +158,7 @@
         }
 
         &__logo-img {
-            width: (133px/768px)*100vw;
+            width: 133px;
         }
     }
 
@@ -289,6 +305,13 @@
         }
     }
 
+    .packages {
+        &__title {
+            font-size: 25px;
+            margin-bottom: 42px;
+        }
+    }
+
     .subscribe {
         &__wrap {
             flex-direction: column;
@@ -314,7 +337,7 @@
 
     .reviews {
         &__title {
-            font-size: 30px;
+            font-size: 25px;
             margin-bottom: 42px;
         }
 
@@ -396,6 +419,13 @@
         }
     }
 
+    .packages {
+        &__title {
+            font-size: 22px;
+            line-height: 22px;
+        }
+    }
+
     .reviews {
         &__title {
             font-size: 22px;
@@ -405,13 +435,21 @@
 }
 
 @media (max-width: 548px) {
+    .hotel-info {
+        padding-bottom: 50px;
+    }
+
+    .packages {
+        padding-bottom: 50px;
+    }
+
     .reviews {
         padding-bottom: 50px;
-        padding-bottom: 60px;
     }
 
     .activities {
         padding-top: 40px;
+        padding-bottom: 50px;
 
         &__title {
             margin-bottom: 36px;
@@ -458,7 +496,6 @@
         &__contacts {
             grid-row: 1 / 2;
             grid-column: 1 / 2;
-            //width: (290px / 320px) * 100vw;
         }
 
         &__contact-form {
