--- a/2_hotel-booking/blocks/hotel-info/config.pug
+++ b/2_hotel-booking/blocks/hotel-info/config.pug
@@ -2,3 +2,4 @@
 - var isFlashOffer = true
 - var description = "Half-Board / All Inclusive + Complimentary Activities + Child Stays Free"
 - var starCounter = 5
+- var path = "/2_hotel-booking/blocks/hotel-info/"
