--- a/2_hotel-booking/blocks/search/search.pug
+++ b/2_hotel-booking/blocks/search/search.pug
@@ -1,4 +1,4 @@
-form.search.navbar__search(action="#")
+form.search.navbar__search.navbar__search--hidden(action="#")
 
     input.search__input(type="text", placeholder="Search Location")
     
