--- a/2_hotel-booking/blocks/hotel-info/hotel-info.pug
+++ b/2_hotel-booking/blocks/hotel-info/hotel-info.pug
@@ -6,7 +6,7 @@ section.hotel-info
             .hotel-info__wrapper
                 .hotel-info__stars
                     - for (var x=0; x<starCounter; x++)
-                        img(src=img+"hotel-info/img/star.svg", alt="Star").hotel-info__star
+                        img(src=path+"img/star.svg", alt="Star").hotel-info__star
                 h1.hotel-info__name #{hotel}
                 if isFlashOffer
                     span.hotel-info__offer Flash Offer
