--- a/2_hotel-booking/css/style.scss
+++ b/2_hotel-booking/css/style.scss
@@ -34,5 +34,8 @@
 //Подключение стилей для футера
 @import "../blocks/footer/footer";
 
+//Подключение стилей модального окна
+@import "../blocks/modal/modal";
+
 //Подключение стилей для адаптива
 @import "./media";
