--- a/2_hotel-booking/css/style.scss
+++ b/2_hotel-booking/css/style.scss
@@ -35,7 +35,7 @@
 @import "../blocks/footer/footer";
 
 //Подключение стилей модального окна
-@import "../blocks/modal/modal";
+@import "../blocks/hotel-info/booking/modal/modal";
 
 //Подключение стилей для адаптива
 @import "./media";
