--- a/2_hotel-booking/blocks/hotel-info/booking/booking.pug
+++ b/2_hotel-booking/blocks/hotel-info/booking/booking.pug
@@ -1,5 +1,5 @@
 include ./config.pug
-script(src=path+"booking.js")
+script(src=path+"/booking.js")
 
 .booking.hotel-info__booking
     .booking__container
@@ -10,14 +10,14 @@ script(src=path+"booking.js")
                 span.booking__per-room per room / night
             .booking__description
                 .booking__wrap
-                    img(src=path+"user.svg", alt="Person Icon").booking__icon
+                    img(src=path+"/img/user.svg", alt="Person Icon").booking__icon
                     span.booking__text 2 x Guests
                 .booking__wrap
-                    img(src=path+"home.svg", alt="Home Icon").booking__icon.booking__icon--home
+                    img(src=path+"/img/home.svg", alt="Home Icon").booking__icon.booking__icon--home
                     span.booking__text 1 x Room
         .booking__call-centre
             span.booking__quick Quick Booking
             .booking__call
-                img(src=path+"phone.svg", alt="Phone Icon").booking__phone-icon
+                img.booking__phone-icon(src=path+"/img/phone.svg", alt="Phone Icon")
                 a(href="tel: 12100").booking__tel 12100
-        button.booking__button View Other Options
+        button.booking__button(data-toggle="modal") View Other Options
