--- a/2_hotel-booking/blocks/hotel-info/booking/modal/_modal.scss
+++ b/2_hotel-booking/blocks/hotel-info/booking/modal/_modal.scss
@@ -51,7 +51,7 @@
     &__title {
         @include font-mulish(18px, 700, $light, 22px);
         text-align: center;
-        margin-bottom: 15px;
+        margin: 0 0 15px 0;
     }
 
     &__form {
