--- a/2_hotel-booking/css/_media.scss
+++ b/2_hotel-booking/css/_media.scss
@@ -144,7 +144,6 @@
     .modal {
         &__dialog {
             padding: 20px 40px;
-            min-width: 300px;
         }
 
         &__btn {
@@ -622,6 +621,15 @@
 
         &__info {
             flex-direction: column;
+        }
+    }
+}
+
+@media (max-width: 300px) {
+    .modal {
+        &__dialog {
+            min-width: none;
+            width: 100%;
         }
     }
 }
