--- a/2_hotel-booking/index.pug
+++ b/2_hotel-booking/index.pug
@@ -5,7 +5,6 @@ html(lang="en")
         meta(http-equiv="X-UA-Compatible", content="IE=edge")
         meta(name="viewport", content="width=device-width, initial-scale=1.0")
         link(rel="stylesheet", href="/2_hotel-booking/css/style.css")
-        script(src="/2_hotel-booking/js/jquery-3.6.0.min.js")
         title Best Tour Plan - Hotel Booking
     body
         include ./blocks/header/header.pug
@@ -16,3 +15,16 @@ html(lang="en")
         include ./blocks/reviews/reviews.pug
         include ./blocks/activities/activities.pug
         include ./blocks/footer/footer.pug
+
+        //jQuery
+        script(src="/2_hotel-booking/js/jquery-3.6.0.min.js")
+        //Слайдер
+        script(src="/2_hotel-booking/blocks/hotel-info/slider/js/swiper-bundle.min.js")
+        script(src="/2_hotel-booking/blocks/hotel-info/slider/js/swiper-bundle.min.js.map")
+        script(src="/2_hotel-booking/blocks/hotel-info/slider/js/slider.js")
+        //Паралакс
+        script(src="/2_hotel-booking/blocks/subscribe/js/parallax.min.js")
+        script(src="/2_hotel-booking/blocks/subscribe/js/subscribe.js")
+        //Валидация форм
+        script(src="/2_hotel-booking/blocks/validate/js/jquery.validate.min.js")
+        script(src="/2_hotel-booking/blocks/validate/js/validate.js")
