--- a/2_hotel-booking/blocks/footer/_footer.scss
+++ b/2_hotel-booking/blocks/footer/_footer.scss
@@ -117,11 +117,18 @@
         gap: 15px 30px;
     }
 
+    &__form-wrap {
+        display: grid;
+        grid-template-columns: repeat(2, minmax(1fr, 255px));
+        column-gap: 30px;
+        grid-row: 1 / 2;
+        grid-column: span 2;
+    }
+
     &__input {
 
         &-name {
             grid-row: 1 / 2;
-            grid-column: 1 / 2;
             height: 50px;
             border-radius: 4px;
             @include font-mulish(12px, 400, $light-gray, 15px);
@@ -130,7 +137,6 @@
 
         &-phone {
             grid-row: 1 / 2;
-            grid-column: 2 / 3;
             height: 50px;
             border-radius: 4px;
             @include font-mulish(12px, 400, $light-gray, 15px);
