--- a/2_hotel-booking/css/_media.scss
+++ b/2_hotel-booking/css/_media.scss
@@ -147,12 +147,12 @@
         }
 
         &__btn {
-            grid-row: 6 / 7;
+            grid-row: 2 / 3;
             grid-column: span 2;
         }
 
         &__prompt {
-            grid-row: 5 / 6;
+            grid-row: 1 / 2;
             grid-column: span 2;
             margin-bottom: 15px;
             justify-self: start;
@@ -596,26 +596,34 @@
             grid-template-columns: 1fr;
         }
 
+        &__form-wrap {
+            grid-template-columns: 1fr;
+        }
+
         &__input {
+            &-name {
+                grid-row: 1 / 2;
+            }
+
             &-phone {
-                grid-row: 2 / 3;
-                grid-column: 1 / 2;
+                grid-row: 3 / 4;
+                margin-top: 15px;
             }
         }
 
         &__message {
-            grid-row: 3 / 4;
-            grid-column: 1 / 2;
+            grid-row: 2 / 3;
+            grid-column: 1 / 3;
         }
 
         &__prompt {
-            grid-row: 4 / 5;
+            grid-row: 3 / 4;
             grid-column: 1 / 2;
             justify-self: start;
         }
 
         &__button {
-            grid-row: 5 / 6;
+            grid-row: 4 / 5;
             grid-column: 1 / 2;
         }
 
