--- a/2_hotel-booking/css/style.css
+++ b/2_hotel-booking/css/style.css
@@ -428,6 +428,10 @@ img {
   border-radius: 6px;
 }
 
+.search__wrap {
+  width: 19.79167vw;
+}
+
 .search__input {
   width: 19.79167vw;
   height: 40px;
@@ -442,6 +446,10 @@ img {
   line-height: 15.06px;
 }
 
+.search__input:focus {
+  outline: none;
+}
+
 .search__button {
   width: 4.51389vw;
   height: 40px;
@@ -451,6 +459,7 @@ img {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  cursor: pointer;
 }
 
 .search__img {
@@ -2136,6 +2145,7 @@ button.swiper-pagination-bullet {
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
+  cursor: pointer;
 }
 
 /**
@@ -3386,13 +3396,23 @@ button.swiper-pagination-bullet {
   gap: 15px 30px;
 }
 
+.footer__form-wrap {
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-columns: (minmax(1fr, 255px))[2];
+      grid-template-columns: repeat(2, minmax(1fr, 255px));
+  -webkit-column-gap: 30px;
+          column-gap: 30px;
+  -ms-grid-row: 1;
+  -ms-grid-row-span: 1;
+  grid-row: 1 / 2;
+  grid-column: span 2;
+}
+
 .footer__input-name {
   -ms-grid-row: 1;
   -ms-grid-row-span: 1;
   grid-row: 1 / 2;
-  -ms-grid-column: 1;
-  -ms-grid-column-span: 1;
-  grid-column: 1 / 2;
   height: 50px;
   border-radius: 4px;
   font-family: "Mulish", serif;
@@ -3407,9 +3427,6 @@ button.swiper-pagination-bullet {
   -ms-grid-row: 1;
   -ms-grid-row-span: 1;
   grid-row: 1 / 2;
-  -ms-grid-column: 2;
-  -ms-grid-column-span: 1;
-  grid-column: 2 / 3;
   height: 50px;
   border-radius: 4px;
   font-family: "Mulish", serif;
@@ -3558,7 +3575,7 @@ button.swiper-pagination-bullet {
   margin: 0 0 15px 0;
 }
 
-.modal__form {
+.modal__form-wrap {
   display: -ms-grid;
   display: grid;
   -ms-grid-columns: (minmax(min-content, 1fr))[2];
@@ -3569,7 +3586,7 @@ button.swiper-pagination-bullet {
 .modal__input {
   height: 50px;
   width: 100%;
-  margin-bottom: 15px;
+  margin-top: 15px;
   grid-column: span 2;
   border-radius: 4px;
   background-color: #fff;
@@ -3588,8 +3605,17 @@ button.swiper-pagination-bullet {
   width: 100%;
   background-color: #fff;
   margin-bottom: 15px;
+  margin-top: 15px;
   border-radius: 4px;
   resize: none;
+}
+
+.modal__btn-wrap {
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-columns: (minmax(min-content, 1fr))[2];
+      grid-template-columns: repeat(2, minmax(-webkit-min-content, 1fr));
+      grid-template-columns: repeat(2, minmax(min-content, 1fr));
 }
 
 .modal__btn {
@@ -3619,6 +3645,14 @@ button.swiper-pagination-bullet {
   -ms-flex-item-align: center;
       -ms-grid-row-align: center;
       align-self: center;
+}
+
+.validate {
+  font-family: "Mulish", serif;
+  font-size: 12px;
+  font-weight: 400;
+  color: #EC1F46;
+  line-height: 15px;
 }
 
 @media (min-width: 1440px) {
@@ -3752,15 +3786,15 @@ button.swiper-pagination-bullet {
     padding: 20px 40px;
   }
   .modal__btn {
-    -ms-grid-row: 6;
+    -ms-grid-row: 2;
     -ms-grid-row-span: 1;
-    grid-row: 6 / 7;
+    grid-row: 2 / 3;
     grid-column: span 2;
   }
   .modal__prompt {
-    -ms-grid-row: 5;
+    -ms-grid-row: 1;
     -ms-grid-row-span: 1;
-    grid-row: 5 / 6;
+    grid-row: 1 / 2;
     grid-column: span 2;
     margin-bottom: 15px;
     -ms-grid-column-align: start;
@@ -4198,26 +4232,33 @@ button.swiper-pagination-bullet {
     -ms-grid-columns: 1fr;
         grid-template-columns: 1fr;
   }
+  .footer__form-wrap {
+    -ms-grid-columns: 1fr;
+        grid-template-columns: 1fr;
+  }
+  .footer__input-name {
+    -ms-grid-row: 1;
+    -ms-grid-row-span: 1;
+    grid-row: 1 / 2;
+  }
   .footer__input-phone {
+    -ms-grid-row: 3;
+    -ms-grid-row-span: 1;
+    grid-row: 3 / 4;
+    margin-top: 15px;
+  }
+  .footer__message {
     -ms-grid-row: 2;
     -ms-grid-row-span: 1;
     grid-row: 2 / 3;
     -ms-grid-column: 1;
-    -ms-grid-column-span: 1;
-    grid-column: 1 / 2;
+    -ms-grid-column-span: 2;
+    grid-column: 1 / 3;
   }
-  .footer__message {
+  .footer__prompt {
     -ms-grid-row: 3;
     -ms-grid-row-span: 1;
     grid-row: 3 / 4;
-    -ms-grid-column: 1;
-    -ms-grid-column-span: 1;
-    grid-column: 1 / 2;
-  }
-  .footer__prompt {
-    -ms-grid-row: 4;
-    -ms-grid-row-span: 1;
-    grid-row: 4 / 5;
     -ms-grid-column: 1;
     -ms-grid-column-span: 1;
     grid-column: 1 / 2;
@@ -4225,9 +4266,9 @@ button.swiper-pagination-bullet {
         justify-self: start;
   }
   .footer__button {
-    -ms-grid-row: 5;
+    -ms-grid-row: 4;
     -ms-grid-row-span: 1;
-    grid-row: 5 / 6;
+    grid-row: 4 / 5;
     -ms-grid-column: 1;
     -ms-grid-column-span: 1;
     grid-column: 1 / 2;
