Added mask phone

--- a/2_hotel-booking/blocks/hotel-info/booking/modal/modal.pug
+++ b/2_hotel-booking/blocks/hotel-info/booking/modal/modal.pug
@@ -14,7 +14,7 @@ script(src=modal__path+"modal.js")
                     name="name"
                     placeholder="Your Full Name*"
                     required)
-                input.modal__input(
+                input.modal__input.modal__tel(
                     type="tel"
                     name="tel"
                     placeholder="Phone Number*"
