--- a/2_hotel-booking/index.pug
+++ b/2_hotel-booking/index.pug
@@ -28,3 +28,6 @@ html(lang="en")
         //Валидация форм
         script(src="/2_hotel-booking/blocks/validate/js/jquery.validate.min.js")
         script(src="/2_hotel-booking/blocks/validate/js/validate.js")
+        //Маска для телефонного номера
+        script(src="/2_hotel-booking/blocks/mask/js/jquery.mask.min.js")
+        script(src="/2_hotel-booking/blocks/mask/js/mask.js")
